--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.12"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.4"
+beautifulsoup4 = "^4.12.3"
 
 
 [tool.poetry.group.linter.dependencies]
