--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ arrow = "^1.3.0"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.4"
 beautifulsoup4 = "^4.12.3"
+pytest-cov = "^6.0.0"
 
 
 [tool.poetry.group.linter.dependencies]
