--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ arrow = "^1.3.0"
 pytest = "^8.3.4"
 beautifulsoup4 = "^4.12.3"
 pytest-cov = "^6.0.0"
+junitparser = "^3.2.0"
 
 
 [tool.poetry.group.linter.dependencies]
