--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run Tests (by Makefile)
         run: |
-          make test
+          poetry run make test
 
       - name: Combine Coverage Report (XML)
         run: |
