--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -70,14 +70,14 @@ jobs:
       - name: Parse Coverage for Comment
         id: coverage-comment
         run: |
-          poetry run python -c "
+          percentage=$(poetry run python -c "
           import xml.etree.ElementTree as ET
           tree = ET.parse('coverage.xml')
           root = tree.getroot()
           line_rate = float(root.attrib['line-rate'])
-          percentage = line_rate * 100
-          print(f'COVERAGE_PERCENT={percentage:.2f}')  # GitHub Actions에서 사용할 환경 변수 출력"
-        shell: bash
+          print(f'{line_rate * 100:.2f}')
+          ")
+          echo "COVERAGE_PERCENT=$percentage" >> "$GITHUB_OUTPUT"
 
       - name: Add Coverage Comment to PR
         uses: peter-evans/create-or-update-comment@v4
@@ -89,4 +89,3 @@ jobs:
             |--------|-----|
             | 📊 Line Coverage | ${{ steps.coverage-comment.outputs.COVERAGE_PERCENT }}% |
           token: ${{ secrets.PAT_TOKEN }}
-        if: github.event_name == 'pull_request'
