--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -3,7 +3,7 @@ name: PR Test & Coverage Report
 on:
   pull_request:
     branches:
-      - main  # 필요시 변경
+      - main
 
 jobs:
   test:
@@ -35,21 +35,50 @@ jobs:
         run: |
           poetry run coverage xml -o coverage.xml
 
-      - name: Parse Coverage and Write Summary
+      - name: Parse Coverage for Comment
+        id: coverage-comment
         run: |
-          poetry run python -c "
+          percentage=$(poetry run python -c "
           import xml.etree.ElementTree as ET
           tree = ET.parse('coverage.xml')
           root = tree.getroot()
           line_rate = float(root.attrib['line-rate'])
-          percentage = line_rate * 100
-          with open('${{ github.step_summary }}', 'a') as f:
-              f.write('| Metric  | Value |\n')
-              f.write('|--------|-----|\n')
-              f.write(f'| 📊 Line Coverage | {percentage:.2f}% |\n')
-          "
+          print(f'{line_rate * 100:.2f}')
+          ")
+          echo "COVERAGE_PERCENT=$percentage" >> "$GITHUB_OUTPUT"
 
-      - name: Publish Test Results Summary
+      - name: Parse JUnit Results for Summary
+        id: junit-summary
+        run: |
+          summary=$(poetry run python -c "
+          import xml.etree.ElementTree as ET
+          import glob
+
+          total_tests = 0
+          total_failures = 0
+          total_skipped = 0
+          total_errors = 0
+          total_time = 0.0
+
+          for file in glob.glob('test-results/*.xml'):
+              tree = ET.parse(file)
+              root = tree.getroot()
+              total_tests += int(root.attrib['tests'])
+              total_failures += int(root.attrib['failures'])
+              total_skipped += int(root.attrib['skipped'])
+              total_errors += int(root.attrib.get('errors', 0))
+              total_time += float(root.attrib.get('time', 0))
+
+          passed = total_tests - total_failures - total_skipped
+          print(f'PASSED={passed}')
+          print(f'FAILED={total_failures}')
+          print(f'SKIPPED={total_skipped}')
+          print(f'TIME={total_time:.2f}')
+          ")
+
+          echo "$summary" >> "$GITHUB_OUTPUT"
+
+      - name: Publish Test Results Summary (optional)
         uses: test-summary/action@v2
         with:
           paths: "test-results/*.xml"
@@ -67,25 +96,19 @@ jobs:
           name: junit-xml-reports
           path: test-results/
 
-      - name: Parse Coverage for Comment
-        id: coverage-comment
-        run: |
-          percentage=$(poetry run python -c "
-          import xml.etree.ElementTree as ET
-          tree = ET.parse('coverage.xml')
-          root = tree.getroot()
-          line_rate = float(root.attrib['line-rate'])
-          print(f'{line_rate * 100:.2f}')
-          ")
-          echo "COVERAGE_PERCENT=$percentage" >> "$GITHUB_OUTPUT"
-
-      - name: Add Coverage Comment to PR
+      - name: Add Test & Coverage Summary Comment to PR
         uses: peter-evans/create-or-update-comment@v4
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            ## 📝 Coverage Report
-            | Metric  | Value |
+            ## 📝 Test & Coverage Report
+
+            | Metric   | Value |
             |--------|-----|
+            | ✅ Passed | ${{ steps.junit-summary.outputs.PASSED }} |
+            | ❌ Failed | ${{ steps.junit-summary.outputs.FAILED }} |
+            | ⏩ Skipped | ${{ steps.junit-summary.outputs.SKIPPED }} |
+            | ⏱️ Time | ${{ steps.junit-summary.outputs.TIME }}s |
             | 📊 Line Coverage | ${{ steps.coverage-comment.outputs.COVERAGE_PERCENT }}% |
+
           token: ${{ secrets.PAT_TOKEN }}
