feat(chapter09): include chapter09 in test and coverage configurations

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ testpaths =
     chapter04/tests
     chapter06/tests
     chapter07/tests
+    chapter09/tests
 python_files = test_*.py
 pythonpath = .
 norecursedirs = chapter02 chapter03 chapter05
