feat(chapter10): add chapter10 to Makefile and pytest.ini for testing

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ testpaths =
     chapter06/tests
     chapter07/tests
     chapter09/tests
+    chapter10/tests
 python_files = test_*.py
 pythonpath = .
 norecursedirs = chapter02 chapter03 chapter05
