feat(chapter11): add initial API refactoring chapter and update test configurations

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ testpaths =
     chapter07/tests
     chapter09/tests
     chapter10/tests
+    chapter11/tests
 python_files = test_*.py
 pythonpath = .
 norecursedirs = chapter02 chapter03 chapter05
