--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,7 @@ testpaths =
     chapter09/tests
     chapter10/tests
     chapter11/tests
+    chapter12/tests
 python_files = test_*.py
 pythonpath = .
 norecursedirs = chapter02 chapter03 chapter05
