feat(chapter08): implement track_summary function and add tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ testpaths =
     chapter04/tests
     chapter06/tests
     chapter07/tests
+    chapter08/tests
     chapter09/tests
     chapter10/tests
     chapter11/tests
